# Podstawy_programowania_IWiK_BANK

./: CMakeLists.txt  CMakePresets.json  Podstawy_programowania_IWiK_BANK.h  README.md  vcpkg_rf.txt
ApiController/: ApiController.cpp  ApiController.h  CmakeLists.txt
Controllers/: ApiController.cpp  ApiController.h  CmakeLists.txt  ControllerBase.h
CreateTables/: CMakeLists.txt  CreateTables.cpp  CreateTables.h
DatabaseConnection/: CMakeLists.txt
Domain/: AdminFactory.cpp  AdminFactory.h  CmakeLists.txt  CustomerFactory.cpp  CustomerFactory.h  Domain.h  UserFactory.cpp  UserFactory.h
GMDB_frontend/: README.md  angular.json  package-lock.json  package.json
GMDB_frontend/src/: index.html  styles.css
GMDB_frontend/src/apiService/: api-service.service.ts
GMDB_frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
GMDB_frontend/src/auth/: auth-routing.module.ts  auth.module.ts
GMDB_frontend/src/auth/component/auth/: auth.component.css  auth.component.html  auth.component.ts
GMDB_frontend/src/home/: home-routing.module.ts  home.module.ts
GMDB_frontend/src/home/components/accounts/: accounts.component.css  accounts.component.html  accounts.component.ts
GMDB_frontend/src/home/components/admin/admin/: admin.component.css  admin.component.html  admin.component.ts
GMDB_frontend/src/home/components/atm/atm/: atm.component.css  atm.component.html  atm.component.spec.ts  atm.component.ts
GMDB_frontend/src/home/components/history/history/: history.component.css  history.component.html  history.component.ts
GMDB_frontend/src/home/components/home/: home.component.css  home.component.html  home.component.ts
GMDB_frontend/src/home/components/transfer/transfer/: transfer.component.css  transfer.component.html  transfer.component.ts
GMDB_frontend/src/models/: Account.ts  History.ts  User.ts
Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Operations/: CMakeLists.txt  Operations.cpp  Operations.h
db/include/: CreateTables.h  DatabaseConnection.h
db/src/: CreateTables.cpp  DatabaseConnection.cpp  Main.cpp  Operations.cpp
db/tests/: TestCreateTables.cpp  TestDatabaseConnection.cpp
domain/: CmakeLists.txt  domain.cpp
domain/include/: Account.h  Employee.h  User.h
main/src/: Podstawy_programowania_IWiK_BANK.cpp
